# treefmt-pre-commit

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  LICENSE-MIT  README.md  build.py  mirror.py  publish.py  pyproject.toml  treefmt.toml
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: main.yml  pre-commit-action.yml  pre-commit-manual.yml  pre-commit.yml  prek-action.yml  prek-manual.yml  prek.yml  publish.yml
treefmt_pre_commit/: __init__.py  __main__.py
version-templates/: .pre-commit-config.yaml.template  README.md.template  pyproject.toml.template
